qstring-ref: also trigger on QString::toFloat()

BUG: 360338