checks/qstringref.cpp
@@ -58,8 +58,8 @@ static bool isInterestingSecondMethod(CXXMethodDecl *method, const clang::LangOp
         return false;
 
     static const vector<string> list = { "compare", "contains", "count", "startsWith", "endsWith", "indexOf",
-                                         "isEmpty", "isNull", "lastIndexOf", "length", "size", "toDouble", "toInt",
-                                         "toUInt", "toULong", "toULongLong", "toUShort", "toUcs4"};
+                                         "isEmpty", "isNull", "lastIndexOf", "length", "size", "toDouble", "toFloat",
+                                         "toInt", "toUInt", "toULong", "toULongLong", "toUShort", "toUcs4"};
 
     if (!clazy_std::contains(list, method->getNameAsString()))
         return false;
